Wrote a little reminder of what I need to do for model1_lr.ipynb

--- a/models/model1_lr.ipynb
+++ b/models/model1_lr.ipynb
@@ -1030,9 +1030,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "afb10753",
+   "metadata": {},
+   "source": [
+    "#\n",
+    "\n",
+    "TO DO:\n",
+    "Perform L1 Regression comparing NVIDIA with like 20 stocks of our choice"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7273891c",
+   "id": "20005527",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9692a0bd",
    "metadata": {},
    "outputs": [],
    "source": []
