--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -9,6 +9,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "081d51ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully imported helper modules from project root.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import the helper python files\n",
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "# Get the absolute path to the project's root directory (QRT)\n",
+    "# This goes 'up' one level from the 'models' folder\n",
+    "PROJECT_ROOT = os.path.abspath('..')\n",
+    "\n",
+    "# Add the project root to the system path\n",
+    "if PROJECT_ROOT not in sys.path:\n",
+    "    sys.path.append(PROJECT_ROOT)\n",
+    "\n",
+    "# Now you can import your helper files\n",
+    "import preprocess\n",
+    "import data_sourcing\n",
+    "import visualisations\n",
+    "\n",
+    "print(\"Successfully imported helper modules from project root.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77b0741a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "3ca9c083",
    "metadata": {},
@@ -16,8 +59,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "cs109b",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
