Starting on the EDA

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -45,11 +45,248 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "id": "a9af0d53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "77b0741a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.read_csv('data/data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f3f26701",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>NVDA.O (TRDPRC_1)</th>\n",
+       "      <th>JPM (TRDPRC_1)</th>\n",
+       "      <th>GS (TRDPRC_1)</th>\n",
+       "      <th>AAPL.O (TRDPRC_1)</th>\n",
+       "      <th>MSFT.O (TRDPRC_1)</th>\n",
+       "      <th>TSLA.O (TRDPRC_1)</th>\n",
+       "      <th>META.O (TRDPRC_1)</th>\n",
+       "      <th>GOOGL.O (TRDPRC_1)</th>\n",
+       "      <th>BLK (TRDPRC_1)</th>\n",
+       "      <th>...</th>\n",
+       "      <th>TSM (TRDPRC_1)</th>\n",
+       "      <th>XAU= (BID)</th>\n",
+       "      <th>AMZN.O (TRDPRC_1)</th>\n",
+       "      <th>WMT (TRDPRC_1)</th>\n",
+       "      <th>COST.O (TRDPRC_1)</th>\n",
+       "      <th>NKE (TRDPRC_1)</th>\n",
+       "      <th>PFE (TRDPRC_1)</th>\n",
+       "      <th>TSN (TRDPRC_1)</th>\n",
+       "      <th>SPY (TRDPRC_1)</th>\n",
+       "      <th>F (TRDPRC_1)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Close</td>\n",
+       "      <td>Close</td>\n",
+       "      <td>Close</td>\n",
+       "      <td>Close</td>\n",
+       "      <td>Close</td>\n",
+       "      <td>Close</td>\n",
+       "      <td>Close</td>\n",
+       "      <td>Close</td>\n",
+       "      <td>Close</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Close</td>\n",
+       "      <td>Close</td>\n",
+       "      <td>Close</td>\n",
+       "      <td>Close</td>\n",
+       "      <td>Close</td>\n",
+       "      <td>Close</td>\n",
+       "      <td>Close</td>\n",
+       "      <td>Close</td>\n",
+       "      <td>Close</td>\n",
+       "      <td>Close</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>21/11/2025</td>\n",
+       "      <td>182.8</td>\n",
+       "      <td>298.76</td>\n",
+       "      <td>778.99</td>\n",
+       "      <td>272.88</td>\n",
+       "      <td>475.14</td>\n",
+       "      <td>400.57</td>\n",
+       "      <td>596.86</td>\n",
+       "      <td>302.23</td>\n",
+       "      <td>1009.2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>277.67</td>\n",
+       "      <td>4090.59</td>\n",
+       "      <td>221.07</td>\n",
+       "      <td>105.42</td>\n",
+       "      <td>901.48</td>\n",
+       "      <td>63.06</td>\n",
+       "      <td>25.28</td>\n",
+       "      <td>53.74</td>\n",
+       "      <td>663.13</td>\n",
+       "      <td>12.89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20/11/2025</td>\n",
+       "      <td>180.64</td>\n",
+       "      <td>298.38</td>\n",
+       "      <td>773.7</td>\n",
+       "      <td>266.25</td>\n",
+       "      <td>478.43</td>\n",
+       "      <td>395.23</td>\n",
+       "      <td>589.15</td>\n",
+       "      <td>289.45</td>\n",
+       "      <td>992.52</td>\n",
+       "      <td>...</td>\n",
+       "      <td>277.5</td>\n",
+       "      <td>4076.99</td>\n",
+       "      <td>217.14</td>\n",
+       "      <td>107.11</td>\n",
+       "      <td>893.29</td>\n",
+       "      <td>61.43</td>\n",
+       "      <td>24.4</td>\n",
+       "      <td>52.71</td>\n",
+       "      <td>652.53</td>\n",
+       "      <td>12.41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>19/11/2025</td>\n",
+       "      <td>186.52</td>\n",
+       "      <td>303.27</td>\n",
+       "      <td>785.99</td>\n",
+       "      <td>268.56</td>\n",
+       "      <td>487.12</td>\n",
+       "      <td>403.99</td>\n",
+       "      <td>590.32</td>\n",
+       "      <td>292.81</td>\n",
+       "      <td>1014.68</td>\n",
+       "      <td>...</td>\n",
+       "      <td>282.37</td>\n",
+       "      <td>4080.66</td>\n",
+       "      <td>222.69</td>\n",
+       "      <td>100.61</td>\n",
+       "      <td>890.6</td>\n",
+       "      <td>62.64</td>\n",
+       "      <td>24.88</td>\n",
+       "      <td>53.05</td>\n",
+       "      <td>662.63</td>\n",
+       "      <td>12.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>18/11/2025</td>\n",
+       "      <td>181.36</td>\n",
+       "      <td>299.41</td>\n",
+       "      <td>776.3</td>\n",
+       "      <td>267.44</td>\n",
+       "      <td>493.79</td>\n",
+       "      <td>401.25</td>\n",
+       "      <td>597.69</td>\n",
+       "      <td>284.28</td>\n",
+       "      <td>1019.14</td>\n",
+       "      <td>...</td>\n",
+       "      <td>277.91</td>\n",
+       "      <td>4067.6</td>\n",
+       "      <td>222.55</td>\n",
+       "      <td>101.39</td>\n",
+       "      <td>895.08</td>\n",
+       "      <td>62.49</td>\n",
+       "      <td>25.45</td>\n",
+       "      <td>53.66</td>\n",
+       "      <td>660.08</td>\n",
+       "      <td>13.02</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Date NVDA.O (TRDPRC_1) JPM (TRDPRC_1) GS (TRDPRC_1)  \\\n",
+       "0         NaN             Close          Close         Close   \n",
+       "1  21/11/2025             182.8         298.76        778.99   \n",
+       "2  20/11/2025            180.64         298.38         773.7   \n",
+       "3  19/11/2025            186.52         303.27        785.99   \n",
+       "4  18/11/2025            181.36         299.41         776.3   \n",
+       "\n",
+       "  AAPL.O (TRDPRC_1) MSFT.O (TRDPRC_1) TSLA.O (TRDPRC_1) META.O (TRDPRC_1)  \\\n",
+       "0             Close             Close             Close             Close   \n",
+       "1            272.88            475.14            400.57            596.86   \n",
+       "2            266.25            478.43            395.23            589.15   \n",
+       "3            268.56            487.12            403.99            590.32   \n",
+       "4            267.44            493.79            401.25            597.69   \n",
+       "\n",
+       "  GOOGL.O (TRDPRC_1) BLK (TRDPRC_1)  ... TSM (TRDPRC_1) XAU= (BID)  \\\n",
+       "0              Close          Close  ...          Close      Close   \n",
+       "1             302.23         1009.2  ...         277.67    4090.59   \n",
+       "2             289.45         992.52  ...          277.5    4076.99   \n",
+       "3             292.81        1014.68  ...         282.37    4080.66   \n",
+       "4             284.28        1019.14  ...         277.91     4067.6   \n",
+       "\n",
+       "  AMZN.O (TRDPRC_1) WMT (TRDPRC_1) COST.O (TRDPRC_1) NKE (TRDPRC_1)  \\\n",
+       "0             Close          Close             Close          Close   \n",
+       "1            221.07         105.42            901.48          63.06   \n",
+       "2            217.14         107.11            893.29          61.43   \n",
+       "3            222.69         100.61             890.6          62.64   \n",
+       "4            222.55         101.39            895.08          62.49   \n",
+       "\n",
+       "  PFE (TRDPRC_1) TSN (TRDPRC_1) SPY (TRDPRC_1) F (TRDPRC_1)  \n",
+       "0          Close          Close          Close        Close  \n",
+       "1          25.28          53.74         663.13        12.89  \n",
+       "2           24.4          52.71         652.53        12.41  \n",
+       "3          24.88          53.05         662.63         12.9  \n",
+       "4          25.45          53.66         660.08        13.02  \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
