1 line of code a day keeps the doctor away

--- a/test.ipynb
+++ b/test.ipynb
@@ -9,8 +9,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b0d1168b",
+   "metadata": {},
+   "source": [
+    "## Xuanthe's thoughts:\n",
+    "\n",
+    "Let's just grab `yfin` data to pilot our strategies"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "4b56973a",
    "metadata": {},
    "outputs": [],
